[gd_scene load_steps=6 format=3 uid="uid://bgeo33k3pog4i"]

[ext_resource type="Script" path="res://UI/test_UI.gd" id="1_lr541"]
[ext_resource type="Script" path="res://Characters/Player_Info_Container.gd" id="2_cwqnw"]
[ext_resource type="PackedScene" uid="uid://dmxtgeisdtbo1" path="res://UI/hp_bar.tscn" id="3_hyv2l"]
[ext_resource type="Texture2D" uid="uid://da8b6yf4qa3n0" path="res://Assets/health_bar_glass.png" id="4_2mljm"]
[ext_resource type="PackedScene" uid="uid://cb5jvufckxuhu" path="res://UI/Upgrade_UI/Upgrade_UI.tscn" id="5_3uiyf"]

[node name="Main_UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lr541")

[node name="Player_Info_Panel" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 940.0
offset_top = 15.0
offset_right = 1139.0
offset_bottom = 119.0
script = ExtResource("2_cwqnw")

[node name="VBoxContainer" type="VBoxContainer" parent="Player_Info_Panel"]
layout_mode = 2

[node name="Label" type="Label" parent="Player_Info_Panel/VBoxContainer"]
layout_mode = 2
text = "Player:"

[node name="Player_Is_Alive" type="HBoxContainer" parent="Player_Info_Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Player_Info_Panel/VBoxContainer/Player_Is_Alive"]
layout_mode = 2
text = "Is Alive: "

[node name="Alive_Label" type="Label" parent="Player_Info_Panel/VBoxContainer/Player_Is_Alive"]
layout_mode = 2
size_flags_horizontal = 3
text = "true"
horizontal_alignment = 2

[node name="Soul Shard Count" type="HBoxContainer" parent="Player_Info_Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Player_Info_Panel/VBoxContainer/Soul Shard Count"]
layout_mode = 2
text = "Soul Shards:"

[node name="Soul Shard Count Label" type="Label" parent="Player_Info_Panel/VBoxContainer/Soul Shard Count"]
layout_mode = 2
size_flags_horizontal = 3
text = "true"
horizontal_alignment = 2

[node name="Soul Shard Pending" type="HBoxContainer" parent="Player_Info_Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Player_Info_Panel/VBoxContainer/Soul Shard Pending"]
layout_mode = 2
text = "Pending Soul Shards:"

[node name="Soul_Shards_Pending_Label" type="Label" parent="Player_Info_Panel/VBoxContainer/Soul Shard Pending"]
layout_mode = 2
text = "true"

[node name="TextureProgressBar" parent="." instance=ExtResource("3_hyv2l")]
layout_mode = 0
offset_left = 0.0
offset_top = 0.0
offset_right = 355.0
offset_bottom = 189.0
texture_over = ExtResource("4_2mljm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 22.0
offset_top = 464.0
offset_right = 153.0
offset_bottom = 600.0

[node name="Kill_Player_Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Kill Player"

[node name="Spawn_Enemy_Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Spawn Enemy"

[node name="Revive_Player_Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Revive Player"

[node name="Gain_Soul_Shard_Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Gain Soul Shard"

[node name="Open_Upgrade_UI_Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Upgrade UI"

[node name="Upgrade_UI" parent="." instance=ExtResource("5_3uiyf")]
layout_mode = 1
offset_left = -187.0
offset_top = -214.0
offset_right = 187.0
offset_bottom = 214.0

[connection signal="pressed" from="VBoxContainer/Kill_Player_Button" to="." method="_on_kill_player_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Spawn_Enemy_Button" to="." method="_on_spawn_enemy_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Revive_Player_Button" to="." method="_on_revive_player_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Gain_Soul_Shard_Button" to="." method="_on_gain_soul_shard_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Open_Upgrade_UI_Button" to="." method="_on_open_upgrade_ui_button_pressed"]
